--- a/testmvc/Views/Account/Manage.cshtml
+++ b/testmvc/Views/Account/Manage.cshtml
@@ -25,6 +25,11 @@
             @Html.TextBoxFor(x => x.Email, new { @class = "form-control" }) @Html.ValidationMessageFor(x => x.Email)
         </div>
     </div>
-    <br />
-            <input type="submit" class="btn btn-primary" value="@Strings.Save" /> <text>|</text> @Html.ActionLink(@Strings.Back, "index", "home")
+    
+    <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+            <input type="submit" class="btn btn-info btn-sm" value="@Strings.Save" /> <text>|</text> @Html.ActionLink(@Strings.Back, "index", "home")
+    </div>
+    </div>
+    
 }
