--- a/testmvc/Views/Home/Index.cshtml
+++ b/testmvc/Views/Home/Index.cshtml
@@ -4,8 +4,9 @@
     ViewBag.Title = "Index_";
 }
 
-<table border="1">
-    <tr>
+<table class="table table-hover table-condensed">
+    <thead>
+    <tr class="active">
         <td>
             @Strings.FirstName
         </td>
@@ -19,6 +20,8 @@
 
         </td>
     </tr>
+        </thead>
+    <tbody>
 @foreach(UserModel u in Model.Users)
 {
     <tr>
@@ -39,4 +42,5 @@
         </td>
     </tr>
 }
+        </tbody>
 </table>
