--- a/testmvc/Views/Home/Index.cshtml
+++ b/testmvc/Views/Home/Index.cshtml
@@ -8,13 +8,13 @@
     <thead>
     <tr class="active">
         <td>
-            @Strings.FirstName
+            <strong>@Strings.FirstName</strong>
         </td>
         <td>
-            @Strings.LastName
+            <strong>@Strings.LastName</strong>
         </td>
         <td>
-            Email
+            <strong>Email</strong>
         </td>
         <td>
 
