--- a/testmvc/Views/Shared/_Layout.cshtml
+++ b/testmvc/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
             @RenderBody()
 
             @Scripts.Render("~/bundles/jquery")
+            @Scripts.Render("~/bundles/bootstrap")
             @RenderSection("scripts", required: false)
         </div>
     </body>
