--- a/testmvc/Views/Shared/_Layout.cshtml
+++ b/testmvc/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
 
             @Scripts.Render("~/bundles/jquery")
             @Scripts.Render("~/bundles/bootstrap")
+            @Scripts.Render("~/bundles/jqueryval")
             @RenderSection("scripts", required: false)
         </div>
     </body>
