some unit testing

--- a/testmvc/Views/Home/Index.cshtml
+++ b/testmvc/Views/Home/Index.cshtml
@@ -4,194 +4,10 @@
     ViewBag.Title = "Index_";
 }
 
-<script type="text/javascript">
 
-    var editingId = null;
-
-    function Edit(id) {
-
-        if (editingId != null)
-            return;
-
-        editingId = id;
-
-        BeginEditing('FirstName', id);
-        BeginEditing('LastName', id);
-        BeginEditing('Email', id);
-        $('#spanNormalMode-' + id).css('display', 'none');
-        $('#spanEditMode-' + id).css('display', 'inline');
-    }
-
-    function Save(id) {
-        $.ajax({
-            type: 'POST',
-            data: {UserId: id,
-                FirstName: $('#inputFirstNameOf-' + id).val(),
-                LastName: $('#inputLastNameOf-' + id).val(),
-                Email: $('#inputEmailOf-' + id).val()},
-            url: "account/edit",
-            success: function() {
-                SaveEditing(id);
-            },
-
-            error: function (jqXHR, textStatus, errorThrown) {
-                ResetErrorStates(editingId);
-                jqXHR.responseJSON.forEach(function t(f) {
-                    $('#wrapper' + f.Field + 'Of-' + editingId).addClass('has-error');
-                    $('#input' + f.Field + 'Of-' + editingId).tooltip({title : f.Message});
-                });
-            }
-    });
-    }
-
-    function ResetErrorStates(id) {
-        $('#wrapperFirstNameOf-' + id).removeClass('has-error');
-        $('#wrapperLastNameOf-' + id).removeClass('has-error');
-        $('#wrapperEmailOf-' + id).removeClass('has-error');
-        $('#inputFirstNameOf-' + editingId).tooltip('destroy');
-        $('#inputLastNameOf-' + editingId).tooltip('destroy');
-        $('#inputEmailOf-' + editingId).tooltip('destroy');
-    }
-
-    function SaveEditing(id) {
-
-        StopEditing('FirstName', id, true);
-        StopEditing('LastName', id, true);
-        StopEditing('Email', id, true);
-
-        $('#spanNormalMode-' + id).css('display', 'inline');
-        $('#spanEditMode-' + id).css('display', 'none');
-
-        editingId = null;
-    }
-
-    function Cancel(id) {
-        ResetErrorStates(id);
-
-        StopEditing('FirstName', id, false);
-        StopEditing('LastName', id, false);
-        StopEditing('Email', id, false);
-        $('#spanNormalMode-' + id).css('display', 'inline');
-        $('#spanEditMode-' + id).css('display', 'none');
-
-        editingId = null;
-    }
-
-    function StopEditing(field, id, copyVals) {
-        var inputName = '#input' + field + 'Of-' + id;
-        var spanName = '#span' + field + 'Of-' + id;
-
-        if (copyVals) {
-            $(spanName).html($(inputName).val());
-        }
-        $(spanName).css('display', 'inline');
-        $(inputName).css('display', 'none');
-    }
-
-    function BeginEditing(field, id) {
-        var inputName = '#input' + field + 'Of-' + id;
-        var spanName = '#span' + field + 'Of-' + id;
-
-        $(inputName).val($(spanName).html());
-        $(spanName).css('display', 'none');
-        $(inputName).css('display', 'inline');
-    }
-</script>
-
-<table class="table table-hover table-condensed">
-    <thead>
-    <tr class="active">
-        <td style="width: 25%">
-            <strong>@Strings.FirstName</strong>
-        </td>
-        <td style="width: 25%">
-            <strong>@Strings.LastName</strong>
-        </td>
-        <td style="width: 25%">
-            <strong>Email</strong>
-        </td>
-        <td style="width: 25%">
-
-        </td>
-    </tr>
-        </thead>
-    <tbody>
-@foreach(UserModel u in Model.Users)
-{
-    <tr>
-        <td>
-            <div class="" id="wrapperFirstNameOf-@u.UserId">
-                <input type="text" style="display: none" class="form-control" id="inputFirstNameOf-@u.UserId" value="" data-toggle="tooltip" data-placement="top"/>
-            </div>
-            <span id="spanFirstNameOf-@u.UserId">@u.FirstName</span>
-        </td>
-        <td>
-            <div class="" id="wrapperLastNameOf-@u.UserId">
-                <input type="text" style="display: none" class="form-control" id="inputLastNameOf-@u.UserId" value="" data-toggle="tooltip" data-placement="top"/>
-            </div>
-            <span id="spanLastNameOf-@u.UserId">@u.LastName</span>
-        </td>
-        <td>
-            <div class="" id="wrapperEmailOf-@u.UserId">
-                <input type="text" style="display: none" class="form-control" id="inputEmailOf-@u.UserId" value="" data-toggle="tooltip" data-placement="top"/>
-            </div>
-            <span id="spanEmailOf-@u.UserId">@u.Email</span>
-        </td>
-        <td style="vertical-align: middle">
-            @if(ViewBag.CurrentUserIsAdmin)
-            {
-                @*Html.ActionLink(Strings.Edit, "manage", "account", new {id = u.UserId}, null)*@
-                <span id="spanNormalMode-@u.UserId"><a href="javascript:void(0);" onClick="Edit('@u.UserId')">@Strings.Edit</a></span>
-                <span id="spanEditMode-@u.UserId" style="display:none"><a class="btn btn-info" href="javascript:void(0);" onClick="Save('@u.UserId')">@Strings.Save</a> | 
-                    <a href="javascript:void(0);" onclick="Cancel('@u.UserId')">@Strings.Cancel</a></span>
-            }
-        </td>
-    </tr>
-}
-        </tbody>
-</table>
-
-<br/>
-<h4>Наброски другого подхода с использованием дивной верстки и Ajax.BeginForm.</h4>
 @foreach (UserModel u in Model.Users)
 {
-    <div id="container-@u.UserId">
-            <div id="static-@u.UserId">
-                <span id="fname-@u.UserId">@u.FirstName</span>
-                <span id="lname-@u.UserId">@u.LastName</span>
-                <span id="email-@u.UserId">@u.Email</span>
-                <a href="#" onclick="_edit(@u.UserId)">Edit</a>
-            </div>
-
-            <div id="form-@u.UserId" style="display:none">
-                @using (Ajax.BeginForm("edit", "account", new AjaxOptions { HttpMethod = "POST", OnSuccess = String.Format("_success({0})", u.UserId) }))
-                {
-                    <input type="hidden" name="UserId" value="@u.UserId" />
-                    <input type="text" name="FirstName" id="f_fname-@u.UserId" value="@u.FirstName" />
-                    <input type="text" name="LastName" id="f_lname-@u.UserId" value="@u.LastName" />
-                    <input type="text" name="Email" id="f_email-@u.UserId" value="@u.Email" />
-                    <input type="submit" />
-                }
-            </div>
-
-        
-    </div>
+    @Html.Partial("_UserEditingForm", u)
 }
 
-
-<script>
-    function _success(id) {
-        
-        $('#fname-'+id).text($('#f_fname-'+id).val());
-        $('#lname-'+id).text($('#f_lname-'+id).val());
-        $('#email-'+id).text($('#f_email-'+id).val());
-
-        $('#form-'+id).hide();
-        $('#static-'+id).show();
-    }
-
-    function _edit(id){
-        $('#static-'+id).hide();
-        $('#form-'+id).show();
-    }
-</script>
+<script type="text/javascript" src="Scripts/switcher.js"></script>
