--- a/testmvc/Views/Shared/_UserEditingForm.cshtml
+++ b/testmvc/Views/Shared/_UserEditingForm.cshtml
@@ -7,8 +7,10 @@
         <a href="#" onclick="switcher.beginEdit(@Model.UserId)">@Strings.Edit</a>
     </div>
 
-        @using (Ajax.BeginForm("edit", "account", null, new AjaxOptions { HttpMethod = "POST", OnSuccess = String.Format("switcher.endEdit({0}, true)", Model.UserId) }, new { id = "form-" + Model.UserId, style="display:none" }))
+        <!--using (Ajax.BeginForm("users", "api", new { id = Model.UserId }, new AjaxOptions { HttpMethod = "PUT", OnSuccess = String.Format("switcher.endEdit({0}, true)", Model.UserId) }, new { id = "form-" + Model.UserId, style = "display:none" }))-->
+        @using(Ajax.BeginForm(null, null, new AjaxOptions { Url = "api/users/" + Model.UserId, OnSuccess = String.Format("switcher.endEdit({0}, true)", Model.UserId) }, new { id = "form-" + Model.UserId, style = "display:none" }))
         {
+            @Html.HttpMethodOverride(HttpVerbs.Put)
             @Html.HiddenFor(t => t.UserId)
             @Html.TextBoxFor(t => t.FirstName, new { id = "f_fname-" + Model.UserId, @class = "iinput" }) @Html.ValidationMessageFor(t => t.FirstName)
             @Html.TextBoxFor(t => t.LastName, new { id = "f_lname-" + Model.UserId, @class = "iinput" }) @Html.ValidationMessageFor(t => t.LastName)
