--- a/testmvc/Views/Shared/_UsersList.cshtml
+++ b/testmvc/Views/Shared/_UsersList.cshtml
@@ -1,14 +1,12 @@
 ﻿@model testmvc.Models.UsersListViewModel
+@using testmvc.Helpers
 
-<a href="#" onclick="loadContent('FirstName', 0)">По имени</a>
-<a href="#" onclick="loadContent('FirstName_desc', 0)">По имени деск</a>
-<a href="#" onclick="loadContent('LastName', 0)">По фамилии</a>
-<a href="#" onclick="loadContent('LastName_desc', 0)">По фамилии деск</a>
-<a href="#" onclick="loadContent('Email', 0)">По имейлу</a>
-<a href="#" onclick="loadContent('Email_desc', 0)">По имейлу</a>
+
+@Html.OrderingLink(Strings.ByFirstName, "FirstName", (string)ViewBag.OrderBy)
+@Html.OrderingLink(Strings.ByLastName, "LastName", (string)ViewBag.OrderBy)
+@Html.OrderingLink(Strings.ByEmail, "Email", (string)ViewBag.OrderBy)
 
 <input type="text" id="filter" value="@ViewBag.Filter"/><button onclick="loadContent('@ViewBag.OrderBy', 0)">Find</button>
-
 
 @foreach (UserModel u in Model.Users)
 {
@@ -17,5 +15,12 @@
 
 @for (int i = 0; i < ViewBag.TotalPages; i++)
 {
-    <a href="#" onclick="loadContent('@ViewBag.OrderBy', @i)">@(i + 1)</a>
+    if(ViewBag.Page == i)
+    {
+        @(i + 1)
+    }
+    else 
+    { 
+        <a href="#" onclick="loadContent('@ViewBag.OrderBy', @i)">@(i + 1)</a>
+    }
 }
